Fix Railway deployment: Update CORS and Dockerfile
- Add dynamic CORS configuration using environment variable
- Fix frontend Dockerfile CMD syntax error
- Support multiple CORS origins separated by comma
- Update .gitignore to exclude .claude directory

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>